--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </header>
 
     <main id="main-content" class="main-content">
-      <h3><small>Welcome to</small><span> <br>Msoft Ghana Limited</span></h3>
+      <h3><small>Welcome to</small><span> <br>Admission Ghana</span></h3>
       <h3>School Admission 2025</h3>
       <p class="info">
         At <strong>Msoft Gh</strong>, we believe in nurturing the minds of
@@ -59,9 +59,15 @@
       </p>
       <button class="cta">Enroll Now <i class="bx bxs-school bx-burst"></i></button>
       <h4>Don't be left out!!<i class="bx bxs-graduation bx-tada"></i></h4>
-
-    
     </main>
+    <section class="categories">
+        <h2>Admission Categories</h2>
+        <div class="cta-container">
+          <button class="cta-shs">S.H.S <i class="bx bxs-school bx-burst"></i></button>
+        <button class="cta-tertiary">COLLEGE <i class="bx bxs-school bx-burst"></i></button>
+        <button class="cta-tertiary">UNIVERSITY <i class="bx bxs-school bx-burst"></i></button>
+        </div>
+   </section>
 
     <footer class="main-footer" id="main-footer">
       <p>Copyright © Powered By Msoft Ghana Limited</p>
